--- a/dev/index.html
+++ b/dev/index.html
@@ -3,11 +3,30 @@
 // Bad workaround for Documenter + require.js clashing with AnythingLLM.
 // Render the widget inside a sandboxed iframe overlay to isolate globals.
 (function() {
-  const embedId = "bab86340-2922-417a-83b9-3bec3518d8dd";
+  const embedId = "c43c108f-9941-4ee3-87de-ea47d71f5c26";
   const apiBase = "https://anythingllm.krastanov.org/api/embed";
   const src = "https://anythingllm.krastanov.org/embed/anythingllm-chat-widget.min.js";
+  const resizerParentSrc = "https://cdn.jsdelivr.net/npm/iframe-resizer/js/iframeResizer.min.js";
 
-  const injectEmbed = () => {
+  const ensureResizer = () => new Promise((resolve) => {
+    if (window.iFrameResize) {
+      resolve(window.iFrameResize);
+      return;
+    }
+    const existing = document.querySelector('script[data-anythingllm-resizer-parent]');
+    if (existing) {
+      existing.addEventListener('load', () => resolve(window.iFrameResize));
+      return;
+    }
+    const tag = document.createElement("script");
+    tag.src = resizerParentSrc;
+    tag.async = true;
+    tag.dataset.anythingllmResizerParent = "true";
+    tag.onload = () => resolve(window.iFrameResize);
+    document.head.appendChild(tag);
+  });
+
+  const injectEmbed = async () => {
     if (document.getElementById("anythingllm-embed-frame")) return;
 
     const iframe = document.createElement("iframe");
@@ -26,6 +45,7 @@
     </style>
   </head>
   <body>
+    <script src="${resizer_child_src}"><\/script>
     <script
       data-embed-id="${embedId}"
       data-base-api-url="${apiBase}"
@@ -42,6 +62,21 @@
 </html>`;
     iframe.srcdoc = html;
     document.body.appendChild(iframe);
+
+    try {
+      const resizer = await ensureResizer();
+      if (resizer) {
+        resizer({
+          checkOrigin: false,
+          sizeHeight: true,
+          sizeWidth: true,
+          heightCalculationMethod: "lowestElement",
+          widthCalculationMethod: "scroll",
+        }, iframe);
+      }
+    } catch (e) {
+      console.warn("iframe-resizer failed to load", e);
+    }
   };
 
   if (document.readyState === "complete" || document.readyState === "interactive") {
@@ -60,4 +95,4 @@ assets = integrate_anythingllm(
     @__DIR__;
     repo = &quot;github.com/you/MyPackage.jl.git&quot;,
     options = EmbedOptions(; greeting = &quot;Docs-aware helper&quot;, window_width = &quot;320px&quot;),
-)</code></pre><p>Pass <code>assets</code> to <code>Documenter.HTML(assets = assets)</code> in <code>makedocs</code>. All embed attributes listed in the upstream AnythingLLM embed README are represented as <code>String</code> fields in <code>EmbedOptions</code> and may also be passed directly through <code>embed_attributes</code> without validation. The iframe wrapper is only slightly larger than the chat window and defaults to opening the chat immediately with a smaller footprint.</p><h2 id="Deployment-toggles"><a class="docs-heading-anchor" href="#Deployment-toggles">Deployment toggles</a><a id="Deployment-toggles-1"></a><a class="docs-heading-anchor-permalink" href="#Deployment-toggles" title="Permalink"></a></h2><p>Set <code>ANYTHINGLLMDOC_FORCE_DEPLOY</code> to any non-empty value to bypass the deploy check when building docs locally. Configure <code>ANYTHINGLLM_API_BASE</code> and <code>ANYTHINGLLM_API_KEY</code> to point to your instance; the defaults target <code>https://anythingllm.krastanov.org/api/v1</code>.</p></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Sunday 7 December 2025 03:05">Sunday 7 December 2025</span>. Using Julia version 1.12.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+)</code></pre><p>Pass <code>assets</code> to <code>Documenter.HTML(assets = assets)</code> in <code>makedocs</code>. All embed attributes listed in the upstream AnythingLLM embed README are represented as <code>String</code> fields in <code>EmbedOptions</code> and may also be passed directly through <code>embed_attributes</code> without validation. The iframe wrapper is only slightly larger than the chat window and defaults to opening the chat immediately with a smaller footprint.</p><h2 id="Deployment-toggles"><a class="docs-heading-anchor" href="#Deployment-toggles">Deployment toggles</a><a id="Deployment-toggles-1"></a><a class="docs-heading-anchor-permalink" href="#Deployment-toggles" title="Permalink"></a></h2><p>Set <code>ANYTHINGLLMDOC_FORCE_DEPLOY</code> to any non-empty value to bypass the deploy check when building docs locally. Configure <code>ANYTHINGLLM_API_BASE</code> and <code>ANYTHINGLLM_API_KEY</code> to point to your instance; the defaults target <code>https://anythingllm.krastanov.org/api/v1</code>.</p></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Sunday 7 December 2025 03:09">Sunday 7 December 2025</span>. Using Julia version 1.12.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
